<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="org.d3ifcool.hystorms.viewmodel.RegisterViewModelNew" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_splash"
        android:fitsSystemWindows="false"
        tools:context=".ui.auth.RegisterFragment">

        <include
            android:id="@+id/app_bar"
            layout="@layout/normal_appbarlayout" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_register_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/normal_margin"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="@dimen/normal_margin"
                    android:text="@string/register_page_title"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_profile"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginStart="@dimen/normal_margin"
                    android:layout_marginTop="@dimen/normal_margin"
                    android:layout_marginEnd="@dimen/normal_margin"
                    android:contentDescription="@string/profile_picture"
                    app:bindProfileWithFile="@{viewModel.fileToUpload}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_register_title"
                    tools:src="@drawable/ic_account" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab_picture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="80dp"
                    android:layout_marginTop="80dp"
                    android:clickable="true"
                    android:contentDescription="@string/fab_profilepic_desc"
                    tools:src="@drawable/ic_add_white"
                    app:buttonUploadState="@{viewModel.buttonState}"
                    app:layout_constraintStart_toStartOf="@+id/img_profile"
                    app:layout_constraintTop_toTopOf="@+id/img_profile"
                    app:viewState="@{viewModel.viewState}" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tf_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/normal_margin"
                    android:layout_marginTop="@dimen/normal_margin"
                    android:layout_marginEnd="@dimen/normal_margin"
                    android:hint="@string/text_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fab_picture">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:bindLoadingEditTextState="@{viewModel.viewState}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tf_email"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/normal_margin"
                    android:layout_marginTop="@dimen/normal_margin"
                    android:layout_marginEnd="@dimen/normal_margin"
                    android:hint="@string/text_email"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tf_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        app:bindLoadingEditTextState="@{viewModel.viewState}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tf_password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/normal_margin"
                    android:layout_marginTop="@dimen/normal_margin"
                    android:layout_marginEnd="@dimen/normal_margin"
                    android:hint="@string/text_password"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tf_email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        app:bindLoadingEditTextState="@{viewModel.viewState}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tf_confirm_pass"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/normal_margin"
                    android:layout_marginTop="@dimen/normal_margin"
                    android:layout_marginEnd="@dimen/normal_margin"
                    android:hint="@string/text_repassword"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tf_password">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_confirm_pass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        app:bindLoadingEditTextState="@{viewModel.viewState}" />

                </com.google.android.material.textfield.TextInputLayout>

                <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                    android:id="@+id/btn_register"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/normal_margin"
                    android:layout_marginEnd="@dimen/normal_margin"
                    android:layout_marginBottom="@dimen/normal_margin"
                    android:backgroundTint="@color/green_variant"
                    android:text="@string/text_register"
                    android:textColor="@color/green_button"
                    app:bindLoadingButtonState="@{viewModel.viewState}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tf_confirm_pass"
                    app:spinning_bar_color="@color/green_button"
                    app:spinning_bar_padding="6dp"
                    app:spinning_bar_width="4dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>